fix: card gutters to correct align at all sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/* -------------------- Google Fonts -------------------- */
+/*
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@400;600;700&display=swap");
 
 /* -------------------- CSS Variables -------------------- */
@@ -102,7 +102,7 @@ body.night-mode .nightmode-icon {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    
     padding-top: 4rem;
 }
 body.night-mode .hero-section {
@@ -140,7 +140,6 @@ body.night-mode .hero-section {
     margin-bottom: 2.5rem;
     max-width: 100%;
     height: 320px;
-    width: 300%;
 }
 #info-section .card-img-top,
 #self-care .card-img-top {
@@ -334,7 +333,7 @@ h3 + p {
         white-space: nowrap;
     }
     .card {
-        height: 300px;
+        /* height: 300px; */
     }
     .card-body p {
         font-size: 90%;
